Fix the squashing close menu button

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -181,6 +181,7 @@
     background-color: variables.$red;
     width: 40px;
     height: 40px;
+    min-height: 40px;
     padding: 6px 2px;
     border-radius: 100px;
     border: 1px solid variables.$yellow;
